--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon index.js",
-    "start" : "index.js"
+    "dev": "nodemon index.js",
+    "start": "index.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,14 @@
   },
   "homepage": "https://github.com/Lakshaynailwal/FirstPaid#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.0",
+    "nodemon": "^2.0.20",
+    "validator": "^13.9.0"
   }
 }
