admin control added

--- a/config/config.env
+++ b/config/config.env
@@ -2,3 +2,4 @@ MONGO_URL: "mongodb://localhost:27017"
 SECRET: "I am Lakshay"
 EMAIL: "b21303@students.iitmandi.ac.in"
 PASS: "aaetzanuromjuvbl"
+ADMIN: "b21303@students.iitmandi.ac.in"
