--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
+    "mongodb": "^5.0.1",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
